--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   permission_handler: ^5.0.1+1
   flutter_translate: ^1.6.0
   dio: ^3.0.10
+  keyboard_avoider: ^0.1.2
 
 dev_dependencies:
   flutter_test:
