--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,14 @@ dependencies:
   flutter_translate: ^1.6.0
   dio: ^3.0.10
   keyboard_avoider: ^0.1.2
+  pull_to_refresh: ^1.6.1
+  cached_network_image: ^2.3.2+1
+  image_picker: ^0.6.7+11
+  photo_view: ^0.10.2
+  video_thumbnail: ^0.2.2
+  video_player: ^0.11.0
+  audioplayers: ^0.16.1
+  file_picker: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +51,8 @@ flutter:
   fonts:
     - family: Roboto
       fonts:
+        - asset: assets/fonts/Roboto_Thin.ttf
+          weight: 300
         - asset: assets/fonts/Roboto_Light.ttf
           weight: 400
         - asset: assets/fonts/Roboto_LightItalic.ttf
