--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   video_player: ^0.11.0
   audioplayers: ^0.16.1
   file_picker: ^2.0.6
+  google_maps_flutter: ^1.0.2
+  flutter_cache_manager: ^1.4.2
+  fluster: ^1.1.2
 
 dev_dependencies:
   flutter_test:
