--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.3
-  flutter_bloc: ^5.0.1
+  flutter_bloc: ^6.0.0
   kiwi: ^0.2.0
   logger: ^0.9.1
   flutter_svg: ^0.18.1
@@ -38,6 +38,9 @@ dependencies:
   fluster: ^1.1.2
   share: ^0.6.5+2
   sprintf: ^4.0.2
+  socket_io_client: ^0.9.11
+  equatable: ^1.2.5
+  flutter_styled_toast: ^1.4.0+1
 
 dev_dependencies:
   flutter_test:
@@ -56,25 +59,13 @@ flutter:
   fonts:
     - family: Roboto
       fonts:
-        - asset: assets/fonts/Roboto_Thin.ttf
+        - asset: assets/fonts/Thin.ttf
           weight: 300
-        - asset: assets/fonts/Roboto_Light.ttf
+        - asset: assets/fonts/Light.ttf
           weight: 400
-        - asset: assets/fonts/Roboto_LightItalic.ttf
-          weight: 400
-          style: italic
-        - asset: assets/fonts/Roboto_Regular.ttf
+        - asset: assets/fonts/Regular.ttf
           weight: 500
-        - asset: assets/fonts/Roboto_Italic.ttf
-          weight: 500
-          style: italic
-        - asset: assets/fonts/Roboto_Medium.ttf
+        - asset: assets/fonts/Medium.ttf
           weight: 600
-        - asset: assets/fonts/Roboto_MediumItalic.ttf
-          weight: 600
-          style: italic
-        - asset: assets/fonts/Roboto_Bold.ttf
+        - asset: assets/fonts/SemiBold.ttf
           weight: 700
-        - asset: assets/fonts/Roboto_BoldItalic.ttf
-          weight: 700
-          style: italic
