--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter_svg: ^0.18.1
   data_connection_checker: ^0.3.4
   intl: ^0.16.0
-  shared_preferences: ^0.5.10
+  shared_preferences: ^0.5.12+4
   permission_handler: ^5.0.1+1
   flutter_translate: ^1.6.0
   dio: ^3.0.10
@@ -32,7 +32,7 @@ dependencies:
   video_thumbnail: ^0.2.2
   video_player: ^0.11.0
   audioplayers: ^0.16.1
-  file_picker: ^2.0.6
+  file_picker: ^2.0.13
   google_maps_flutter: ^1.0.2
   flutter_cache_manager: ^1.4.2
   fluster: ^1.1.2
