--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   photo_view: ^0.10.2
   video_thumbnail: ^0.2.2
   video_player: ^0.11.0
-  audioplayers: ^0.16.1
+  audioplayers: ^0.17.0
   file_picker: ^2.0.13
   google_maps_flutter: ^1.0.2
   flutter_cache_manager: ^1.4.2
@@ -39,10 +39,11 @@ dependencies:
   share: ^0.6.5+2
   sprintf: ^4.0.2
   socket_io_client: ^0.9.11
-  equatable: ^1.2.5
   flutter_styled_toast: ^1.4.0+1
   path_provider: ^1.6.24
-  geolocation: ^1.1.2
+  location: ^3.2.1
+  equatable: ^1.2.5
+  geocoder: ^0.2.1
 
 dev_dependencies:
   flutter_test:
